// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transforming SVG content > AL.svg (mask xlink:href) 1`] = `
"import { forwardRef, useId } from 'react';
import { FlagIconBase } from 'src/icons/flag-icon/_FlagIconBase';
type Props = {
  borderRadius?: number;
  height: number;
  width: number;
};
export const AL = forwardRef<SVGSVGElement, Props>(
  ({ height, width, borderRadius }, ref) => {
    const uniqueId = useId();
    return (
      <FlagIconBase
        height={height}
        width={width}
        ref={ref}
        viewBox="0 0 640 480"
        borderRadius={borderRadius}
      >
        <path fill="#e41e20" d="M0 0h640v480H0z" />
        <path
          id={\`\${uniqueId}-0\`}
          d="M272 93.3c-4.6 0-12.3 1.5-12.2 5-13-2.1-14.3 3.2-13.5 8 1.2-1.9 2.7-3 3.9-3.1 1.7-.3 3.5.3 5.4 1.4a21.6 21.6 0 0 1 4.8 4.1c-4.6 1.1-8.2.4-11.8-.2a16.5 16.5 0 0 1-5.7-2.4c-1.5-1-2-2-4.3-4.3-2.7-2.8-5.6-2-4.7 2.3 2.1 4 5.6 5.8 10 6.6 2.1.3 5.3 1 8.9 1 3.6 0 7.6-.5 9.8 0-1.3.8-2.8 2.3-5.8 2.8-3 .6-7.5-1.8-10.3-2.4.3 2.3 3.3 4.5 9.1 5.7 9.6 2 17.5 3.6 22.8 6.5a37.3 37.3 0 0 1 10.9 9.2c4.7 5.5 5 9.8 5.2 10.8 1 8.8-2.1 13.8-7.9 15.4-2.8.7-8-.7-9.8-2.9-2-2.2-3.7-6-3.2-12 .5-2.2 3.1-8.3.9-9.5a273.7 273.7 0 0 0-32.3-15.1c-2.5-1-4.5 2.4-5.3 3.8a50.2 50.2 0 0 1-36-23.7c-4.2-7.6-11.3 0-10.1 7.3 1.9 8 8 13.8 15.4 18 7.5 4.1 17 8.2 26.5 8 5.2 1 5.1 7.6-1 8.9-12.1 0-21.8-.2-30.9-9-6.9-6.3-10.7 1.2-8.8 5.4 3.4 13.1 22.1 16.8 41 12.6 7.4-1.2 3 6.6 1 6.7-8 5.7-22.1 11.2-34.6 0-5.7-4.4-9.6-.8-7.4 5.5 5.5 16.5 26.7 13 41.2 5 3.7-2.1 7.1 2.7 2.6 6.4-18.1 12.6-27.1 12.8-35.3 8-10.2-4.1-11 7.2-5 11 6.7 4 23.8 1 36.4-7 5.4-4 5.6 2.3 2.2 4.8-14.9 12.9-20.8 16.3-36.3 14.2-7.7-.6-7.6 8.9-1.6 12.6 8.3 5.1 24.5-3.3 37-13.8 5.3-2.8 6.2 1.8 3.6 7.3a53.9 53.9 0 0 1-21.8 18c-7 2.7-13.6 2.3-18.3.7-5.8-2-6.5 4-3.3 9.4 1.9 3.3 9.8 4.3 18.4 1.3 8.6-3 17.8-10.2 24.1-18.5 5.5-4.9 4.9 1.6 2.3 6.2-12.6 20-24.2 27.4-39.5 26.2-6.7-1.2-8.3 4-4 9 7.6 6.2 17 6 25.4-.2 7.3-7 21.4-22.4 28.8-30.6 5.2-4.1 6.9 0 5.3 8.4-1.4 4.8-4.8 10-14.3 13.6-6.5 3.7-1.6 8.8 3.2 9 2.7 0 8.1-3.2 12.3-7.8 5.4-6.2 5.8-10.3 8.8-19.9 2.8-4.6 7.9-2.4 7.9 2.4-2.5 9.6-4.5 11.3-9.5 15.2-4.7 4.5 3.3 6 6 4.1 7.8-5.2 10.6-12 13.2-18.2 2-4.4 7.4-2.3 4.8 5-6 17.4-16 24.2-33.3 27.8-1.7.3-2.8 1.3-2.2 3.3l7 7c-10.7 3.2-19.4 5-30.2 8l-14.8-9.8c-1.3-3.2-2-8.2-9.8-4.7-5.2-2.4-7.7-1.5-10.6 1 4.2 0 6 1.2 7.7 3.1 2.2 5.7 7.2 6.3 12.3 4.7 3.3 2.7 5 4.9 8.4 7.7l-16.7-.5c-6-6.3-10.6-6-14.8-1-3.3.5-4.6.5-6.8 4.4 3.4-1.4 5.6-1.8 7.1-.3 6.3 3.7 10.4 2.9 13.5 0l17.5 1.1c-2.2 2-5.2 3-7.5 4.8-9-2.6-13.8 1-15.4 8.3a17 17 0 0 0-1.2 9.3c.8-3 2.3-5.5 4.9-7 8 2 11-1.3 11.5-6.1 4-3.2 9.8-3.9 13.7-7.1 4.6 1.4 6.8 2.3 11.4 3.8 1.6 5 5.3 6.9 11.3 5.6 7 .2 5.8 3.2 6.4 5.5 2-3.3 1.9-6.6-2.5-9.6-1.6-4.3-5.2-6.3-9.8-3.8-4.4-1.2-5.5-3-9.9-4.3 11-3.5 18.8-4.3 29.8-7.8l7.7 6.8c1.5.9 2.9 1.1 3.8 0 6.9-10 10-18.7 16.3-25.3 2.5-2.8 5.6-6.4 9-7.3 1.7-.5 3.8-.2 5.2 1.3 1.3 1.4 2.4 4.1 2 8.2-.7 5.7-2.1 7.6-3.7 11-1.7 3.5-3.6 5.6-5.7 8.3-4 5.3-9.4 8.4-12.6 10.5-6.4 4.1-9 2.3-14 2-6.4.7-8 3.8-2.8 8.1 4.8 2.6 9.2 2.9 12.8 2.2 3-.6 6.6-4.5 9.2-6.6 2.8-3.3 7.6.6 4.3 4.5-5.9 7-11.7 11.6-19 11.5-7.7 1-6.2 5.3-1.2 7.4 9.2 3.7 17.4-3.3 21.6-8 3.2-3.5 5.5-3.6 5 1.9-3.3 9.9-7.6 13.7-14.8 14.2-5.8-.6-5.9 4-1.6 7 9.6 6.6 16.6-4.8 19.9-11.6 2.3-6.2 5.9-3.3 6.3 1.8 0 6.9-3 12.4-11.3 19.4 6.3 10.1 13.7 20.4 20 30.5l19.2-214L320 139c-2-1.8-8.8-9.8-10.5-11-.7-.6-1-1-.1-1.4.9-.4 3-.8 4.5-1-4-4.1-7.6-5.4-15.3-7.6 1.9-.8 3.7-.4 9.3-.6a30.2 30.2 0 0 0-13.5-10.2c4.2-3 5-3.2 9.2-6.7a86.3 86.3 0 0 1-19.5-3.8 37.4 37.4 0 0 0-12-3.4zm.8 8.4c3.8 0 6.1 1.3 6.1 2.9 0 1.6-2.3 2.9-6.1 2.9s-6.2-1.5-6.2-3c0-1.6 2.4-2.8 6.2-2.8z"
        />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="100%"
          height="100%"
          transform="matrix(-1 0 0 1 640 0)"
        />
      </FlagIconBase>
    );
  },
);
"
`;

exports[`Transforming SVG content > CN.svg (data:image) 1`] = `
"import { forwardRef, useId } from 'react';
import { FlagIconBase } from 'src/icons/flag-icon/_FlagIconBase';
type Props = {
  borderRadius?: number;
  height: number;
  width: number;
};
export const CN = forwardRef<SVGSVGElement, Props>(
  ({ height, width, borderRadius }, ref) => {
    const uniqueId = useId();
    return (
      <FlagIconBase
        height={height}
        width={width}
        ref={ref}
        viewBox="0 0 640 480"
        borderRadius={borderRadius}
      >
        <defs>
          <path
            id={\`\${uniqueId}-0\`}
            fill="#ffde00"
            d="M-.6.8 0-1 .6.8-1-.3h2z"
          />
        </defs>
        <path fill="#de2910" d="M0 0h640v480H0z" />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(71.9991 0 0 72 120 120)"
        />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(-12.33562 -20.5871 20.58684 -12.33577 240.3 48)"
        />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(-3.38573 -23.75998 23.75968 -3.38578 288 95.8)"
        />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(6.5991 -23.0749 23.0746 6.59919 288 168)"
        />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(14.9991 -18.73557 18.73533 14.99929 240 216)"
        />
        <pattern
          id={\`\${uniqueId}-0\`}
          width="1"
          height="1"
          patternContentUnits="objectBoundingBox"
        >
          <use xlinkHref={\`#\${uniqueId}-2\`} transform="scale(.00217)" />
        </pattern>
        <image
          id={\`\${uniqueId}-2\`}
          xlinkHref="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcwAAAHM"
        />
      </FlagIconBase>
    );
  },
);
"
`;

exports[`Transforming SVG content > CN.svg (mask xlink:href) 1`] = `
"import { forwardRef, useId } from 'react';
import { FlagIconBase } from 'src/icons/flag-icon/_FlagIconBase';
type Props = {
  borderRadius?: number;
  height: number;
  width: number;
};
export const CN = forwardRef<SVGSVGElement, Props>(
  ({ height, width, borderRadius }, ref) => {
    const uniqueId = useId();
    return (
      <FlagIconBase
        height={height}
        width={width}
        ref={ref}
        viewBox="0 0 640 480"
        borderRadius={borderRadius}
      >
        <defs>
          <path
            id={\`\${uniqueId}-0\`}
            fill="#ffde00"
            d="M-.6.8 0-1 .6.8-1-.3h2z"
          />
        </defs>
        <path fill="#de2910" d="M0 0h640v480H0z" />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(71.9991 0 0 72 120 120)"
        />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(-12.33562 -20.5871 20.58684 -12.33577 240.3 48)"
        />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(-3.38573 -23.75998 23.75968 -3.38578 288 95.8)"
        />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(6.5991 -23.0749 23.0746 6.59919 288 168)"
        />
        <use
          xlinkHref={\`#\${uniqueId}-0\`}
          width="30"
          height="20"
          transform="matrix(14.9991 -18.73557 18.73533 14.99929 240 216)"
        />
      </FlagIconBase>
    );
  },
);
"
`;

exports[`Transforming SVG content > With data:image (data:image) 1`] = `
"import { forwardRef, useId } from 'react';
import { FlagIconBase } from 'src/icons/flag-icon/_FlagIconBase';
type Props = {
  borderRadius?: number;
  height: number;
  width: number;
};
export const CN = forwardRef<SVGSVGElement, Props>(
  ({ height, width, borderRadius }, ref) => {
    const uniqueId = useId();
    return (
      <FlagIconBase
        height={height}
        width={width}
        ref={ref}
        viewBox="0 0 24 24"
        borderRadius={borderRadius}
      >
        <path
          fill={\`url(#\${uniqueId}-0)\`}
          d="m20.966 20.041-2.296-7.834a.757.757 0 0 1 0-.418l2.296-7.834a.747.747 0 0 0-.925-.924l-7.834 2.295a.755.755 0 0 1-.418 0L3.955 3.034a.747.747 0 0 0-.924.925l2.295 7.834c.04.136.04.282 0 .418l-2.295 7.834a.747.747 0 0 0 .924.924l7.834-2.296a.755.755 0 0 1 .418 0l7.834 2.296a.747.747 0 0 0 .925-.924v-.004Z"
        />
        <g filter={\`url(#\${uniqueId}-1)\`}>
          <path
            fill="#F9D984"
            d="m16.485 16.022-1.149-3.918a.394.394 0 0 1 0-.208l1.149-3.918a.372.372 0 0 0-.463-.462l-3.918 1.148a.394.394 0 0 1-.208 0L7.978 7.516a.372.372 0 0 0-.462.462l1.148 3.918a.394.394 0 0 1 0 .208l-1.148 3.918a.372.372 0 0 0 .462.463l3.918-1.149a.394.394 0 0 1 .208 0l3.918 1.149a.372.372 0 0 0 .463-.463Z"
          />
        </g>
        <defs>
          <pattern
            id={\`\${uniqueId}-0\`}
            width="1"
            height="1"
            patternContentUnits="objectBoundingBox"
          >
            <use xlinkHref={\`#\${uniqueId}-2\`} transform="scale(.00217)" />
          </pattern>
          <filter
            id={\`\${uniqueId}-1\`}
            width="13"
            height="13"
            x="5.5"
            y="5.5"
            colorInterpolationFilters="sRGB"
            filterUnits="userSpaceOnUse"
          >
            <feFlood floodOpacity="0" result="BackgroundImageFix" />
            <feBlend
              in="SourceGraphic"
              in2="BackgroundImageFix"
              result="shape"
            />
            <feGaussianBlur
              result="effect1_foregroundBlur_4150_91298"
              stdDeviation="1"
            />
          </filter>
          <image
            xlinkHref="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcwAAAHMCAYAAABY25iGAAAgAElEQVR4Xuy9B7s1S7cVdNY5Yg6oqKiYAwoooAiCiAUCYO53xkbA5NeN4q7V2lKxrxzmbdP2D//6N7vMwF1n807HXcBcwLxdYXrrY35lhRkbf2YU5nOAaSFaYLpCsndi4v8DndaspHgxWAMAAAAASUVORK5CYII="
            id={\`\${uniqueId}-2\`}
            width="460"
            height="460"
          />
        </defs>
      </FlagIconBase>
    );
  },
);
"
`;

exports[`Transforming SVG content > style prop (mask-type:alpha) 1`] = `
"import { forwardRef, useId } from 'react';
import { FlagIconBase } from 'src/icons/flag-icon/_FlagIconBase';
type Props = {
  borderRadius?: number;
  height: number;
  width: number;
};
export const CN = forwardRef<SVGSVGElement, Props>(
  ({ height, width, borderRadius }, ref) => {
    const uniqueId = useId();
    return (
      <FlagIconBase
        height={height}
        width={width}
        ref={ref}
        viewBox="0 0 24 24"
        borderRadius={borderRadius}
      >
        <mask
          id={\`\${uniqueId}-0\`}
          width="18"
          height="20"
          x="3"
          y="2"
          maskUnits="userSpaceOnUse"
          style={{ maskType: 'alpha' }}
        >
          <path
            fill={\`url(#\${uniqueId}-1)\`}
            d="M3 20.234V3.766c0-.7.566-1.266 1.266-1.266H18.94c1.13 0 1.696 1.365.898 2.163l-2.145 2.145a7.322 7.322 0 0 1 2.151 5.194 7.323 7.323 0 0 1-2.15 5.194l2.14 2.14c.795.8.232 2.164-.897 2.164H4.266c-.7 0-1.266-.566-1.266-1.266Z"
          />
        </mask>
        <g mask={\`url(#\${uniqueId}-0)\`}>
          <path
            fill={\`url(#\${uniqueId}-2)\`}
            d="M12.498 19.347a7.345 7.345 0 1 0 0-14.69 7.345 7.345 0 0 0 0 14.69Z"
          />
          <path
            fill={\`url(#\${uniqueId}-3)\`}
            d="M3 3.77v16.464c0 .7.566 1.266 1.266 1.266h14.67c1.13 0 1.692-1.365.897-2.163l-4.425-4.426a4.102 4.102 0 0 0 1.206-2.913c0-1.14-.46-2.163-1.203-2.909l4.426-4.426c.798-.798.232-2.163-.898-2.163H4.266C3.566 2.5 3 3.066 3 3.766v.004Z"
          />
          <g opacity=".5">
            <g filter={\`url(#\${uniqueId}-4)\`}>
              <path
                fill="#061238"
                d="M11.59 18.696a6.694 6.694 0 1 0 0-13.388 6.694 6.694 0 0 0 0 13.388Z"
              />
            </g>
            <g filter={\`url(#\${uniqueId}-5)\`}>
              <path
                fill="#FFE37D"
                d="M12.456 18.696a6.694 6.694 0 1 0 0-13.388 6.694 6.694 0 0 0 0 13.388Z"
              />
            </g>
          </g>
        </g>
        <defs>
          <linearGradient
            id={\`\${uniqueId}-1\`}
            x1="22.179"
            x2="-9.073"
            y1="11.977"
            y2="12.044"
            gradientUnits="userSpaceOnUse"
          >
            <stop stopColor="#2740F3" />
            <stop offset=".99" stopColor="#AA2DC9" />
          </linearGradient>
          <linearGradient
            id={\`\${uniqueId}-2\`}
            x1="13.691"
            x2="19.288"
            y1="12.023"
            y2="12.121"
            gradientUnits="userSpaceOnUse"
          >
            <stop stopColor="#fff" />
            <stop offset="1" stopColor="#FFE37D" />
          </linearGradient>
          <linearGradient
            id={\`\${uniqueId}-3\`}
            x1="22.179"
            x2="-9.073"
            y1="11.977"
            y2="12.044"
            gradientUnits="userSpaceOnUse"
          >
            <stop stopColor="#2740F3" />
            <stop offset=".99" stopColor="#AA2DC9" />
          </linearGradient>
          <filter
            id={\`\${uniqueId}-4\`}
            width="19.388"
            height="19.388"
            x="1.896"
            y="2.308"
            colorInterpolationFilters="sRGB"
            filterUnits="userSpaceOnUse"
          >
            <feFlood floodOpacity="0" result="BackgroundImageFix" />
            <feBlend
              in="SourceGraphic"
              in2="BackgroundImageFix"
              result="shape"
            />
            <feGaussianBlur
              result="effect1_foregroundBlur_4150_91294"
              stdDeviation="1.5"
            />
          </filter>
          <filter
            id={\`\${uniqueId}-5\`}
            width="17.388"
            height="17.388"
            x="3.762"
            y="3.308"
            colorInterpolationFilters="sRGB"
            filterUnits="userSpaceOnUse"
          >
            <feFlood floodOpacity="0" result="BackgroundImageFix" />
            <feBlend
              in="SourceGraphic"
              in2="BackgroundImageFix"
              result="shape"
            />
            <feGaussianBlur
              result="effect1_foregroundBlur_4150_91294"
              stdDeviation="1"
            />
          </filter>
        </defs>
      </FlagIconBase>
    );
  },
);
"
`;
